# cursorNuriMvp

./: .env.example  .replit  BRIEFING.md  drizzle.config.ts  jest.config.ts  on  package-lock.json  package.json  pyproject.toml  replit.nix  tailwind.config.ts  tsconfig.json  tutorial.eval.ts  vercel.json  vite.config.ts
attached_assets/: Pasted--Memory-Service-Searching-memories-for-user-84-with-context-Dag-Nuri-wat-weet-jij-allemaal-over--1738588222109.txt  Pasted--Route-Modularization-Project-Briefing-Current-State-Main-routing-setup-exists-in-server--1738321222862.txt  Pasted--body-data-new-gr-c-s-check-loaded-14-1217-0-data-gr-ext-installed-div-id-root-div-c-1737382617388.txt  Pasted--html-lang-en-head-style-data-vite-theme-data-inject-first-root-backgrou-1737381874434.txt  Pasted--progressPercentage-100-Adding-memory-with-messages-role-user--1738311849873.txt  Pasted--routes-ts-import-type-Express-from-express-import-createServer-type-Server-from-ht-1738415392707.txt  Pasted-1-Data-Modeling-Database-a-Village-Partners-Table-Create-a-new-table-e-g-village-partners-in-1737134072224.txt  Pasted-10-06-21-AM-express-serving-on-port-5000-AUTH-GET-authenticated-false-AUTH-GET-vite-c-1738145466126.txt  Pasted-4-Memory-Operations-Mem0-provides-a-simple-and-customizable-interface-for-performing-CRUD-operatio-1736797701113.txt  Pasted-8-17-38-AM-express-GET-api-onboarding-progress-200-in-93ms-currentOnboardingStep-1-complet-1738311936744.txt  Pasted-Add-Variability-Helper-Functions-These-control-response-patterns-and-structures-dynamically-typesc-1737204371441.txt  (+33 more)
(+213 files in other folders)
