[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "flask>=3.1.0",
    "langchain>=0.3.15",
    "pypdf>=5.1.0",
    "sentence-transformers>=3.3.1",
    "tiktoken>=0.8.0",
    "waitress>=3.0.2",
]
